--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # Built application files
-*.apk
-*.ap_
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -12,6 +10,8 @@
 bin/
 gen/
 out/
+
+.idea/
 
 # Gradle files
 .gradle/
